<resources>
    <string name="app_name">Proyecto_Movil_Crisol</string>
    <string name="email">Email</string>
    <string name="dni">DNI</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="pass">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarme">Registrarme</string>
    <string name="registro">¿No tienes cuenta? Regístrate</string>
    <string name="inicio">¿Ya tienes una cuenta? Inicia Sesión</string>
    <string name="description">Imagen</string>
    <string name="login">Inicia Sesión</string>
    <string name="form_registro">Registro</string>
    <string name="perfil">Perfil</string>
    <string name="principal">Inicio</string>
    <string name="carrito">Carrito</string>
    <string name="listado">Mis compras</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editar">Editar</string>
    <string name="telefono">Teléfono</string>
    <string name="direccion">Dirección</string>


</resources>